apps/mongodb/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb
  labels:
    app: mongodb
    release: mongodb
